still have mobile issues on cart page.. possibly due to chat component blocking input for button at bottom even though not visible.  adding padding as test

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -81,4 +81,5 @@ footer {
 
 .subtotal_and_checkout_div_in_cart{
   z-index: 9999;
+  padding-bottom: 300px;
 }
